--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -63,8 +63,8 @@ p.normalFont {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 30px;
-    width: 30px;
+    height: 25px;
+    width: 25px;
     border-radius: 50%;
     background-color: rgba(105, 105, 105, 0.8);
     margin-right: 1em;
@@ -89,12 +89,14 @@ p.normalFont {
     height: 5vh;
     width: 60em;
     background-color: rgb(31, 31, 31);
+    border-top: solid 1px;
+    border-color: rgba(194, 194, 194, 0.7);
 }
 
 .leftSide {
     display: flex;
     align-items: center;
-    height: 5vh;
+    /* height: 5vh; */
     width: 28em;
     background-color: rgb(31, 31, 31);
     font-size: 10px;
@@ -123,7 +125,7 @@ p.normalFont {
 .rightSide {
     display: flex;
     align-items: center;
-    height: 5vh;
+    /* height: 5vh; */
     width: 25em;
     background-color: rgb(31, 31, 31);
     font-size: 10px;
