--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,8 +1,8 @@
 .mainHeader {
     min-width: 100%;
     width: 960px;
-    height: 11.3vh;
-    /* padding-bottom: 10em; */
+    /* height: 11.3vh; */
+    /* margin-top: 10em; */
     /* position: fixed; */
 }
 
