--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -36,10 +36,11 @@
     color: white;
 }
 
-p.normalFont {
-    font-weight: 400;    
+.normalFont {
+    /* font-weight: 400;     */
     font-size: .8em;
     color: rgba(194, 194, 194, 0.7);
+    margin-top: 1.2em;
 }
 
 .socialIcons {
