--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -185,6 +185,42 @@
     font-size: .9em;
 }
 
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: yellowgreen;
+    width: 100%;
+    /* margin-right: 50em; */
+    /* min-width: 160px; */
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+.hoverdrop {
+    display: flex;
+    height: 65vh;
+    width: 100%;
+    background-color: red;
+}
+
+.dropColumns {
+
+    height: 20vh;
+    width: 1em;
+    background-color: lightblue;
+    margin: 5px 5px;
+    
+}
+
 .searchContainer {
     display: flex;
     align-items: center;
