--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -209,7 +209,7 @@
     display: flex;
     height: 65vh;
     width: 100%;
-    background-color: red;
+    background-color: yellow;
 }
 
 .dropColumns {
