--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -259,6 +259,7 @@ p {
     justify-content: space-between;
     height: 45vh;
     width: 93%;
+    /* background-color: maroon; */
 }
 
 .jackets {
